# cccourse-examples

./: .gitignore  CMakeLists.txt  COPYING  README.md
cmake/: FindFreeImage.cmake
include/: cudautils.h  imgutils.h  logutils.h  oclutils.h  sobel.h
ocl/: sobel.cl
src/: batchresize.cpp  sobel.cpp  sobel_cuda.cu  sobel_mpi.cpp  sobel_mpi_cuda.cu  sobel_mpi_omp.cpp  sobel_ocl.cpp  sobel_omp.cpp
